feat: cart features
