# internal/cart/interfaces/http/router.go
@@ -1,0 +1,20 @@
+package http
+
+import (
+	"github.com/JavascriptDev347/uzum-clone-with-ddd.git/internal/identity/infrastructure/security"
+	"github.com/JavascriptDev347/uzum-clone-with-ddd.git/internal/identity/interfaces/http/middleware"
+	"github.com/go-chi/chi/v5"
+)
+
+func NewRouter(h *CartHandler, tokenService *security.JWTTokenService) chi.Router {
+	r := chi.NewRouter()
+
+	r.Use(middleware.Authenticate(tokenService))
+
+	r.Get("/", h.GetCart)
+	r.Post("/items", h.AddItem)
+	r.Put("/items/{product_id}", h.UpdateItemQuantity)
+	r.Delete("/items/{product_id}", h.RemoveItem)
+
+	return r
+}
